# bgate-unix

./: .gitignore  CONTRIBUTING.md  README.md  diff-main-vs-master.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: benchmark.sh  qa-test.sh
src/bgate_unix/: __init__.py  cli.py  db.py  engine.py
src/byte_gate/: __init__.py  db.py  engine.py
src/fast_gate/: __init__.py  db.py  engine.py
tests/: __init__.py  test_deduper.py  test_durability.py  test_perf_correctness.py
